--- a/basket.html
+++ b/basket.html
@@ -21,54 +21,56 @@
 
     <script src="./components/nav.js"></script>
 
-    <section class="mt-5">
+    <section class="mt-5 content">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <table class="table table-bordered">
-                        <thead class="table-borderless">
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col"></th>
-                                <th scope="col">Count</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Product1</th>
-                                <td><img src="https://placeimg.com/100/30/people" alt=""></td>
-                                <td>12</td>
-                                <td>$5000</td>
-                                <td>$5000</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Product2</th>
-                                <td><img src="https://placeimg.com/100/30/people" alt=""></td>
-                                <td>12</td>
-                                <td>$5000</td>
-                                <td>$5000</td>
-                            </tr>
+                    
+                        <table class="table table-sm-responsive table-bordered">
                             <thead class="table-borderless">
                                 <tr>
+                                    <th scope="col">Name</th>
                                     <th scope="col"></th>
-                                    <th scope="col"></th>
-                                    <th scope="col"></th>
+                                    <th scope="col">Count</th>
+                                    <th scope="col">Price</th>
                                     <th scope="col">Total</th>
-                                    <th scope="col">$10000</th>
                                 </tr>
                             </thead>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Product1</th>
+                                    <td><img src="https://placeimg.com/100/30/people" alt=""></td>
+                                    <td>12</td>
+                                    <td>$5000</td>
+                                    <td>$5000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Product2</th>
+                                    <td><img src="https://placeimg.com/100/30/people" alt=""></td>
+                                    <td>12</td>
+                                    <td>$5000</td>
+                                    <td>$5000</td>
+                                </tr>
+                                <thead class="table-borderless">
+                                    <tr>
+                                        <th scope="col"></th>
+                                        <th scope="col"></th>
+                                        <th scope="col"></th>
+                                        <th scope="col">Total</th>
+                                        <th scope="col">$10000</th>
+                                    </tr>
+                                </thead>
+                            </tbody>
+                        </table>
+                    
+                </div><!--/.col-md-12-->
+            </div><!--/.row-->
+        </div><!--/.container-->
     </section>
 
-    <section class="footer1">
+    <!-- <section class="footer1"> -->
         <script src="./components/footer.js"></script>
-    </section>
+    <!-- </section> -->
 
    
 
