--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                     <form class="form-signin">
                         <img class="mb-4" src="http://www.idevia.in/assets/img/logo.svg" alt="Logo" width="72" height="72">
                     
-                        <p>Not yet Registered? <a href="/signup.html" class="text1">Click here</a></p>
+                        <p>Not yet Registered? <a href="./signup.html" class="text1">Click here</a></p>
                         <h1 class="h3 mb-3 font-weight-normal text1">Log In</h1>
                         <label for="inputEmail" class="sr-only">Email address</label>
                         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
