--- a/order2.html
+++ b/order2.html
@@ -69,7 +69,7 @@
 
                 </div>
 
-                <button class="btn btn-lg bg-background text2 ml-auto mt-5" style="width:12rem;" type="submit">Next</button>
+                <a class="ml-auto" href="./billing.html"><button class="btn btn-lg bg-background text2 mt-5" style="width:12rem;" type="submit">Next</button></a>
 
             </div>
         </div>
