--- a/page1.html
+++ b/page1.html
@@ -26,13 +26,13 @@
 
                     <div style="max-width: 150px;" class="mx-auto text-white my-5">
 
-                        <nav class="nav flex-column filter">
+                        <nav class="nav flex-column">
                             <a class="nav-link" href="#">Filter 1</a>
                             <a class="nav-link" href="#">opt1</a>
                             <a class="nav-link" href="#">opt2</a>
                         </nav>
                         
-                        <nav class="nav flex-column mt-3 pt-3 filter">
+                        <nav class="nav flex-column mt-3">
                             <a class="nav-link" href="#">Filter 1</a>
                             <a class="nav-link" href="#">opt1</a>
                             <a class="nav-link" href="#">opt2</a>
@@ -50,8 +50,11 @@
                             <div class="card mx-auto my-3" style="max-width: 300px;">
                                 <img class="card-img-top" src="https://placeimg.com/350/150/people" alt="Card image cap">
                                 <div class="card-body bg-light">
+                                    <h3>Product Title</h3>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                                         content.</p>
+
+                                    <h4>$ 500</h4>
                                     <div class="clearfix">
                                         <a href="#" class="btn btn-secondary float-left">
                                             <i class="fa fa-heart" aria-hidden="true"></i>
@@ -221,13 +224,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script>
-        (function($){
-            $card = $('.card');
-            $filter = $('.filter');
-            $filter.height($card.height())
-        })(jQuery)
-    </script>
 </body>
 
 </html>
