--- a/page1.html
+++ b/page1.html
@@ -26,13 +26,13 @@
 
                     <div style="max-width: 150px;" class="mx-auto text-white my-5">
 
-                        <nav class="nav flex-column">
+                        <nav class="nav flex-column filter">
                             <a class="nav-link" href="#">Filter 1</a>
                             <a class="nav-link" href="#">opt1</a>
                             <a class="nav-link" href="#">opt2</a>
                         </nav>
                         
-                        <nav class="nav flex-column mt-3 filter-2">
+                        <nav class="nav flex-column mt-3 filter">
                             <a class="nav-link" href="#">Filter 2</a>
                             <a class="nav-link" href="#">opt1</a>
                             <a class="nav-link" href="#">opt2</a>
@@ -252,6 +252,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script>
+        (function ($) {
+            $card = $('.card');
+            $filter = $('.filter');
+            $filter.height($card.height())
+        })(jQuery)
+    </script>
 </body>
 
 </html>
