--- a/page1.html
+++ b/page1.html
@@ -47,7 +47,9 @@
                     <div class="row my-4">
 
                         <div class="col-md-3">
-                            <div class="card mx-auto my-3" style="max-width: 300px;">
+                        
+                            <div class="card mx-auto my-3 bg-light" style="max-width: 300px;">
+                                
                                 <img class="card-img-top" src="https://placeimg.com/350/150/people" alt="Card image cap">
                                 <div class="card-body bg-light">
                                     <h3>Product Title</h3>
